# empty

./: .gitmodules
chapters-writing-skills/: README.md  SKILLS-INDEX.md
chapters-writing-skills/skills/interactive-fiction-writer/: .env.example  SKILL.md  pyproject.toml
chapters-writing-skills/skills/interactive-fiction-writer/references/: format_spec.md  pipeline_guide.md  quality_checklist.md  system_prompt_guide.md
chapters-writing-skills/skills/interactive-fiction-writer/scripts/: build_messages.py  call_api.py  read_skeleton.py  write_skeleton.py
chapters-writing-skills/skills/interactive-fiction-writer/templates/: style_rules.md  system_prompt_variant_a.md  system_prompt_variant_b.md
mermaid作图规范/: chapters-writing-skills-示例拆解与完整Skill设计.md  codex-skills-入门版学习笔记.md  mermaid-A-系统认知层.md  mermaid-B-代码深潜层.md  mermaid-C-运行时行为层.md  mermaid-D-规划可视化层.md  mermaid-使用说明.md  skill-目录规范与平台对比.md  标准Skill目录规范与平台差异说明.md
